feat: fixes and improvements in unit tests